Agrega las imagenes y corrige sus nombres

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Perritos con Dueño con el objetivo de proteger y mejorar la calidad de vida de 
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="images/Lucas - 3 años.jpeg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="images/Lucas_Tres_Anios.jpeg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
                   <p class="card-text">Esta es una tarjeta más amplia con texto de apoyo en la parte inferior que sirve de introducción organica a contenido adicional. Este contenido es un poco más largo.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -184,7 +184,7 @@ Perritos con Dueño con el objetivo de proteger y mejorar la calidad de vida de 
 
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="images/Lucas - 3 años.jpeg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="images/Lucas_Amarillo.jpeg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
                   <p class="card-text">Esta es una tarjeta más amplia con texto de apoyo en la parte inferior que sirve de introducción organica a contenido adicional. Este contenido es un poco más largo.</p>
                   <div class="d-flex justify-content-between align-items-center">
